--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,6 +34,12 @@ twig:
     form:
         resources: ['bootstrap_3_layout.html.twig']
 
+services:
+    twig.text_extension:
+        class: Twig_Extensions_Extension_Text
+        tags:
+            - name: twig.extension
+
 # Assetic Configuration
 assetic:
     debug:          "%kernel.debug%"
